maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:15: error: identifier expected but '}' found.
		}
                ^